--- a/aboutme.html
+++ b/aboutme.html
@@ -4,14 +4,14 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title>Art Soul Colibri</title>
+    <title> Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta content="Art Soul Colibri" name="keywords">
-    <meta content="Art Soul Colibri" name="description">
+    <meta content="Atelier Colibri" name="keywords">
+    <meta content="Atelier Colibri" name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
@@ -31,17 +31,25 @@
     <meta property="og:url" content="https://artsoulcolibri.com/">
     <!-- Meta Etiquetas SEO End -->
 
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
+
     <!-- Favicon Strat-->
     <link href="img/favicon.ico" rel="icon">
     <!-- Favicon End-->
 
-    <!-- Apple Touc Icon Strat -->
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
     <link rel="icon" href="img/favicon.ico">
-    <!-- Apple Touc Icon End -->
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
 
-    <!-- Canonical start -->
+    <!-- Meta Etiqueta Canonical start -->
     <link rel="canonical" href="https://artsoulcolibri.com/" />
-    <!-- Canonical End -->
+    <!-- Meta Etiqueta Canonical End -->
+
+    <!-- Enlazar documento con el manifest.json Start -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Enlazar documento con el manifest.json End -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,6 +70,10 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Meta Etiqueta Google Searc Console -->
+    <meta name="google-site-verification" content="IB728fyCAdsmJ6IPoHnWa6sljqraeJBrhrX5qfL89VU" />
+    <!-- Meta Etiqueta Google Searc Console -->
 
 </head>
 
