--- a/aboutmiart.html
+++ b/aboutmiart.html
@@ -3,65 +3,78 @@
 
 <head>
     <!-- Meta Etiquetas Tittle Start -->
-    <meta charset="utf-8" />
-    <title>Art Soul Colibri</title>
+    <meta charset="utf-8">
+    <title> Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta content="Atelier Colibri" name="keywords" />
-    <meta content="Atelier Colibri" name="description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <meta content="Atelier Colibri" name="keywords">
+    <meta content="Atelier Colibri" name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Atelier Colibri" />
-    <meta name="twitter:title" content="Atelier Colibri" />
-    <meta name="twitter:description" content="Atelier Colibri" />
-    <meta name="robots" content="index, follow" />
-    <meta name="Audience" content="All" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@Atelier Colibri">
+    <meta name="twitter:title" content="Atelier Colibri">
+    <meta name="twitter:description" content="Atelier Colibri">
+    <meta name="robots" content="index, follow">
+    <meta name="Audience" content="All">
 
-    <meta property="og:site_name" content="Atelier Colibri" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Atelier Colibri" />
-    <meta property="og:locale" content="en" />
-    <meta property="og:title" content="Atelier Colibri" />
-    <meta property="og:description" content="Atelier Colibri" />
-    <meta property="og:url" content="https://artsoulcolibri.com/" />
+    <meta property="og:site_name" content="Atelier Colibri">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Atelier Colibri">
+    <meta property="og:locale" content="en">
+    <meta property="og:title" content="Atelier Colibri">
+    <meta property="og:description" content="Atelier Colibri">
+    <meta property="og:url" content="https://artsoulcolibri.com/">
     <!-- Meta Etiquetas SEO End -->
 
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
+
     <!-- Favicon Strat-->
-    <link href="img/favicon.ico" rel="icon" />
+    <link href="img/favicon.ico" rel="icon">
     <!-- Favicon End-->
 
-    <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/favicon.ico" />
-    <!-- Apple Touc Icon End -->
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
 
-    <!-- Canonical start -->
+    <!-- Meta Etiqueta Canonical start -->
     <link rel="canonical" href="https://artsoulcolibri.com/" />
-    <!-- Canonical End -->
+    <!-- Meta Etiqueta Canonical End -->
+
+    <!-- Enlazar documento con el manifest.json Start -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Enlazar documento con el manifest.json End -->
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
-        rel="stylesheet" />
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Meta Etiqueta Google Searc Console -->
+    <meta name="google-site-verification" content="IB728fyCAdsmJ6IPoHnWa6sljqraeJBrhrX5qfL89VU" />
+    <!-- Meta Etiqueta Google Searc Console -->
+
 </head>
 
 <body>
