--- a/index.html
+++ b/index.html
@@ -31,22 +31,25 @@
     <meta property="og:url" content="https://artsoulcolibri.com/">
     <!-- Meta Etiquetas SEO End -->
 
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
+
     <!-- Favicon Strat-->
     <link href="img/favicon.ico" rel="icon">
     <!-- Favicon End-->
 
-    <!-- Apple Touc Icon Strat -->
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
     <link rel="icon" href="img/favicon.ico">
-    <!-- Apple Touc Icon End -->
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
+
+    <!-- Meta Etiqueta Canonical start -->
+    <link rel="canonical" href="https://artsoulcolibri.com/" />
+    <!-- Meta Etiqueta Canonical End -->
 
     <!-- Enlazar documento con el manifest.json Start -->
     <link rel="icon" href="img/favicon.ico">
     <!-- Enlazar documento con el manifest.json End -->
-
-
-    <!-- Canonical start -->
-    <link rel="canonical" href="https://artsoulcolibri.com/" />
-    <!-- Canonical End -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
