--- a/impressões.html
+++ b/impressões.html
@@ -31,17 +31,25 @@
     <meta property="og:url" content="https://artsoulcolibri.com/">
     <!-- Meta Etiquetas SEO End -->
 
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
+
     <!-- Favicon Strat-->
     <link href="img/favicon.ico" rel="icon">
     <!-- Favicon End-->
 
-    <!-- Apple Touc Icon Strat -->
+    <!-- Meta Etiqueta Apple Touc Icon Strat -->
     <link rel="icon" href="img/favicon.ico">
-    <!-- Apple Touc Icon End -->
+    <!-- Meta Etiqueta  Apple Touc Icon End -->
 
-    <!-- Canonical start -->
+    <!-- Meta Etiqueta Canonical start -->
     <link rel="canonical" href="https://artsoulcolibri.com/" />
-    <!-- Canonical End -->
+    <!-- Meta Etiqueta Canonical End -->
+
+    <!-- Enlazar documento con el manifest.json Start -->
+    <link rel="icon" href="img/favicon.ico">
+    <!-- Enlazar documento con el manifest.json End -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,6 +70,10 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Meta Etiqueta Google Searc Console -->
+    <meta name="google-site-verification" content="IB728fyCAdsmJ6IPoHnWa6sljqraeJBrhrX5qfL89VU" />
+    <!-- Meta Etiqueta Google Searc Console -->
 
 </head>
 
