--- a/aboutmiart.html
+++ b/aboutmiart.html
@@ -4,14 +4,18 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title> Art Soul Colibri</title>
+    <title>Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta content="Atelier Colibri" name="keywords">
-    <meta content="Atelier Colibri" name="description">
+    <meta
+        content="Atelier Colibri, Art Soul Colibri, Ana Santiago, Aguarelas, Telas, Mandalas, Impressões, E'books, Cursos, Arte Intuitiva, Os Benefícios da Arte, O Autoconhecimento, Cura Emocional, Expressão Livre, en Porto, Portugal"
+        name="keywords">
+    <meta
+        content="Atelier Colibri, Art Soul Colibri, Ana Santiago, Aguarelas, Telas, Mandalas, Impressões, E'books, Cursos, Arte Intuitiva, Os Benefícios da Arte, O Autoconhecimento, Cura Emocional, Expressão Livre, en Porto, Portugal"
+        name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
@@ -24,9 +28,11 @@
 
     <meta property="og:site_name" content="Atelier Colibri">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Atelier Colibri">
-    <meta property="og:locale" content="en">
-    <meta property="og:title" content="Atelier Colibri">
+    <meta property="og:title"
+        content="Atelier Colibri, Art Soul Colibri, Ana Santiago, Aguarelas, Telas, Mandalas, Impressões, E'books, Cursos, Arte Intuitiva, Os Benefícios da Arte, O Autoconhecimento, Cura Emocional, Expressão Livre, en Porto, Portugal">
+    <meta property="og:locale" content="pt">
+    <meta property="og:title"
+        content="Atelier Colibri, Art Soul Colibri, Ana Santiago, Aguarelas, Telas, Mandalas, Impressões, E'books, Cursos, Arte Intuitiva, Os Benefícios da Arte, O Autoconhecimento, Cura Emocional, Expressão Livre, en Porto, Portugal">
     <meta property="og:description" content="Atelier Colibri">
     <meta property="og:url" content="https://artsoulcolibri.com/">
     <!-- Meta Etiquetas SEO End -->
