--- a/impressões.html
+++ b/impressões.html
@@ -156,7 +156,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_1.jpg" alt="#">
+                                <img class="img-fluid" src="img/Impressões_1.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -174,7 +174,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_2.jpg" alt="#">
+                                <img class="img-fluid" src="img/Impressões_2.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -192,7 +192,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_3.jpg" alt="#">
+                                <img class="img-fluid" src="img/Impressões_3.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -210,7 +210,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_4.jpg" alt="#">
+                                <img class="img-fluid" src="img/Impressões_4.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -228,7 +228,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_5.jpg" alt="#">
+                                <img class="img-fluid" src="img/Impressões_5.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -246,7 +246,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/Impressões_6.jpg" alt="#">
+                                <img class="img-fluid" src="img/Impressões_6.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
