--- a/aguarelas.html
+++ b/aguarelas.html
@@ -157,7 +157,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -173,7 +173,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -189,7 +189,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
@@ -205,7 +205,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
+                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
