--- a/ebook.html
+++ b/ebook.html
@@ -161,7 +161,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/ebook_1.jpg" alt="">
+                                <img class="img-fluid" src="img/ebook_1.jpg" alt="Icon">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
